# modulo_visione

./: README.md
cfg/: darknet_ros.launch  yolov2-tiny.cfg  yolov2-tiny.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
pcl_action/: CMakeLists.txt  package.xml
pcl_action/msg/: custom.msg
pcl_action/src/: main.cpp
zed-ros-wrapper/zed_wrapper/launch/: zed2.launch
zed-ros-wrapper/zed_wrapper/params/: zed2.yaml
